regression/verilog/functioncall/return3.sv
module main;

  function int some_int();
    return; // error: must return value
  endfunction

endmodule
